# BioNeuronai

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .tmp_symbols.txt  ANALYSIS_REPORT.md  ARCHITECTURE_REFACTORING.md  BINANCE_TESTNET_STEP_BY_STEP.md  BioNeuronai.code-workspace  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLEXITY_REDUCTION_GUIDE.md  COMPLEXITY_REFACTORING_REPORT.md  CONTRIBUTING.md  CRYPTO_TRADING_README.md  DEVELOPERS_GUIDE_2025.md  DOCUMENTATION_VALIDATION_REPORT.md  Dockerfile  Dockerfile.train  EXECUTIVE_SUMMARY_CONFLICT_RESOLUTION.md  FAQ.md  FRAMEWORK_SUMMARY.md  IMPROVEMENTS_COMPLETED.md  INTEGRATION_REPORT_V2.1.md  LICENSE  MEGA_CORE_REPORT.md  MERGE_FRAMEWORK.md  PROJECT_STATUS_20260214.md  PROJECT_STRUCTURE.md  README.md  SCRIPTS_STATUS.md  SECURITY.md  STRATEGIES_IMPLEMENTATION_SUMMARY.md  SYNC_STATUS_2026-01-29.md  TRAINING_GUIDE.md  UPGRADE_REPORT_2025.md  USERS_MANUAL_2025.md  ai_coding_assistant.py  bioneuron_rag.db  (+37 more)
.claude/: settings.local.json
.github/: pull_request_template.md
_out/: ARCHITECTURE_REDESIGN_ANALYSIS.md  BIONEURONAI_SYSTEM_ANALYSIS_REPORT.md  COMPLETE_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_SIMPLIFIED.md
archived/: ARCHIVE_INDEX.md  BINANCE_API_IMPLEMENTATION.md  MOCK_ANALYSIS_REPORT.md  PROJECT_COMPLETION_PHASE1_20260215.md  PROJECT_STATUS_20260215.md  PROJECT_STATUS_ANALYSIS_v2.1.md  PROJECT_STATUS_ANALYSIS_v2.2_FINAL.md  README.md  hundred_million_net.py  pytorch_100m_model.py
backtest/: README.md  __init__.py  backtest_engine.py  catalog.py  contracts.py  data_stream.py  mock_connector.py  paths.py  runtime_store.py  service.py  virtual_account.py  web.py
backtesting/: README.md  __init__.py  cost_calculator.py  historical_backtest.py  walk_forward.py
config/: README.md  __init__.py  event_rules.json  keyword_learning.db  market_keywords.db  market_keywords.json  risk_config_optimized.json  strategy_weights_optimized.json  trading_config.py  trading_costs.py
data/: .gitkeep
data_downloads/: README.md  test_simple.py
docs/: ANALYSIS_MODULE_USER_MANUAL.md  ANALYSIS_RAG_INTEGRATION_IMPROVEMENT_PLAN.md  ANALYSIS_VERIFICATION_REPORT_20260324.md  API_INTEGRATION_BASELINE.docx  API_INTEGRATION_BASELINE.md  API_USER_MANUAL.md  ARCHITECTURE_OVERVIEW.md  BACKTEST_DATA_SOURCE.md  BACKTEST_SYSTEM_GUIDE.md  BINANCE_FUTURES_INTEGRATION_AUDIT.md  BINANCE_TESTNET_STEP_BY_STEP.md  BIONEURONAI_MASTER_MANUAL.md  BRANCH_ANALYSIS_COMPARISON.md  BUG_REPORT_NEWS_MODULE.md  CLOUD_TRAINING_RUNBOOK.md  CODEBASE_STATUS_REPORT.md  CODE_FIX_GUIDE.md  CONFLICT_RESOLUTION_EXECUTION_PLAN.md  CONFLICT_RESOLUTION_LOG_TEMPLATE.md  CONFLICT_RESOLUTION_QUICK_REFERENCE.md  CRYPTO_TRADING_GUIDE.md  CRYPTO_TRADING_README.md  CRYPTO_TRADING_SOP.md  DAILY_REPORT_CHECKLIST.md  DATABASE_UPGRADE_GUIDE.md  DATAFLOW_ANALYSIS.md  DATA_PIPELINE_AND_SCHEMA.md  DATA_SOURCES_GUIDE.md  DATA_STORAGE_AND_RETRIEVAL_STRATEGY.md  DATA_STORAGE_INTEGRATION.md  DEPLOYMENT_READINESS_RECORD_20260417.md  DEVELOPMENT_TOOLS.md  DOCKER_DEPLOYMENT_MANUAL.md  DOCUMENTATION_GOVERNANCE_PLAN.md  ERROR_FIX_REPORT_20260214.md  EVOLUTION_SYSTEM_PLAN.md  EXECUTION_GUIDE.md  FEATURE_STATUS.md  FRONTEND_DASHBOARD_MANUAL.md  KNOWHOW_ANALYSIS.md  (+48 more)
evolution_data/: README.md
examples/: __init__.py  advanced_demo.py  applications_demo.py  basic_demo.py  continuous_learning.py  curiosity_benchmark.py  multi_layer_network.py  multi_layer_topology.json  multi_layer_topology.yaml  rag_agent_demo.py  rag_chatbot.py  rag_pipeline.py  rl_curiosity_demo.md  rl_curiosity_demo.py  rl_loop.py  streamlit_dashboard.py  tool_gating.py  tool_gating_demo.py
frontend/: design-tokens.css
jules_session_integration/: TRADING_MODULES_ANALYSIS.md  simulate_trading_environment.py
logs/: .gitkeep
model/: README.md  my_100m_model.pth
news_predictions/: README.md  predictions.jsonl
pretrade_check_data/: pretrade_check_20260119_193140.json  pretrade_check_20260119_193144.json
rag_test_data/: knowledge_base.json
rl_models/: README.md
scratch/: fix_docs_toc.py
scripts/: README.md  batch_merge_prs.py  check_merge_conflicts.py  release.sh
sop_automation_data/: README.md  news_records.json  sop_check_20260119_192557.json  sop_check_20260119_192620.json  sop_check_20260119_192651.json  sop_check_20260127_214138.json  sop_check_20260319_221013.json  sop_check_20260319_230813.json  sop_check_20260319_230936.json  sop_check_20260323_134110.json  sop_check_20260326_090453.json  sop_check_20260326_090522.json  sop_check_20260326_103036.json  sop_check_20260403_104100.json  sop_check_20260403_104425.json
src/: README.md  __init__.py
strategy_arena_results/: README.md  best_strategy_20260405_082521.json  best_strategy_20260405_082656.json  best_strategy_20260405_083012.json  best_strategy_20260405_083441.json  best_strategy_20260405_083503.json  best_strategy_20260405_083532.json  evolution_history_20260405_082521.json  evolution_history_20260405_082656.json  evolution_history_20260405_083012.json  evolution_history_20260405_083441.json  evolution_history_20260405_083503.json  evolution_history_20260405_083532.json  population_gen0_20260405_082521.json  population_gen0_20260405_082656.json  population_gen0_20260405_083012.json  population_gen0_20260405_083441.json  population_gen0_20260405_083503.json  population_gen0_20260405_083532.json
strategy_portfolio_optimization/: README.md  (+3 more)
tests/: conftest.py  (+20 more)
(+935 files in other folders)
