[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioneuronai"
version = "0.1.0"
description = "Bio-inspired novelty gate for AI assistants with Hebbian learning"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "flake8",
]
docs = [
    "sphinx>=7.2",
    "sphinx-rtd-theme",
    "myst-parser",
]
examples = [
    "matplotlib>=3.5.0",
    "jupyter",
]

[project.scripts]
bioneuron-cli = "bioneuronai.core:cli_loop"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "src.bioneuronai.enhanced_auth_module"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.bioneuronai.production_idor_module"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.bioneuronai.production_sqli_module"
ignore_errors = true

[[tool.mypy.overrides]]
module = "src.bioneuronai.improved_core"
ignore_errors = true
