[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioneuronai"
version = "2.1"
description = "AI-driven cryptocurrency futures trading system with genetic algorithm strategy evolution"
readme = "README.md"
authors = [
    {name = "BioNeuronAI Team", email = "team@bioneuronai.example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "TA-Lib>=0.6.8",
    "torch>=2.0.0",
    "sentence-transformers>=2.0.0",
    "websocket-client>=1.7.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "regex>=2023.0.0",
    "faiss-cpu>=1.7.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "schedule>=1.2.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
    "ruff",
]
visualization = [
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
]
notifications = [
    "python-telegram-bot>=20.0",
]
rl = [
    "gymnasium>=0.28.0",
    "stable-baselines3>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/kyle0527/BioNeuronai"
"Repository" = "https://github.com/kyle0527/BioNeuronai"
"Documentation" = "https://github.com/kyle0527/BioNeuronai/tree/main/docs"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
# Note: disallow_untyped_defs disabled due to large codebase
# disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
norecursedirs = ["archived", "tools", "node_modules", ".git", "dist", "build", "frontend"]
